# CoqQ

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST  Makefile  README.md  _CoqProject  coq-mathcomp-quantum.opam  dune-project  mxnorm.v
.github/workflows/: ci.yml
src/: autonat.v  convex.v  cpo.v  ctopology.v  dirac.v  dune  example.v  extnum.v  factoring.v  hermitian.v  hspace.v  hspace_extra.v  inhabited.v  lfundef.v  majorization.v  mcaextra.v  mcextra.v  mxnorm.v  mxpred.v  mxtopology.v  notation.v  orthomodular.v  prodvect.v  qhl.v  qmem.v  qreg.v  qtype.v  quantum.v  qwhile.v  setdec.v  summable.v  svd.v  tensor.v  xvector.v
src/QIT/: commutator.v  series.v
src/dirac/: dirac.v  hstensor.v  setdec.v
src/example/coqq_paper/: example.v  qhl.v  qwhile.v
src/example/diracdec/: dirac_notation.v
src/example/qlaws/: basic_def.v  circuit.v  convex.v  example.v  nondeterministic.v  qwhile.v  recursive.v
src/example/refinement/: language.v  refine.v
