opam-version: "2.0"
name: "coq-mathcomp-quantum"
maintainer: "coq-mathcomp-quantum@anonymous"
license: "CeCILL-B"
authors: ["Coq Quantum Dev. Team"]
build: [ "dune" "build" "-p" name "-j" jobs ]
depends: [
  "coq"                      {>= "8.17" & < "8.21~" }
  "coq-core"                 {>= "8.17" & < "8.21~" }
  "coq-elpi"                 {>= "2.0"  & < "2.1~"  }
  "dune"                     {>= "3.10" & < "4~"    }
  "coq-hierarchy-builder"    {>= "1.7" & < "1.8~"   }
  "coq-mathcomp-ssreflect"   {>= "2.2" & < "2.3~"   }
  "coq-mathcomp-algebra"     {>= "2.2" & < "2.3~"   }
  "coq-mathcomp-fingroup"    {>= "2.2" & < "2.3~"   }
  "coq-mathcomp-finmap"      {>= "2.1" & < "2.2~"   }
  "coq-mathcomp-real-closed" {>= "2.0" & < "2.1~"   }
  "coq-mathcomp-analysis"    {>= "1.3"              }
]
synopsis: "Quantum et al"
